--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,72 @@
-numpy
-opencv-contrib-python
-gym
-tensorflow >= 1.15.0, <=2.0.0
+absl-py==2.1.0
+astunparse==1.6.3
+box2d-py==2.3.5
+certifi==2024.2.2
+charset-normalizer==3.3.2
+cloudpickle==3.0.0
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+decorator==4.4.2
+Farama-Notifications==0.0.4
+filelock==3.13.1
+flatbuffers==24.3.7
+fonttools==4.49.0
+fsspec==2024.2.0
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.1
+gymnasium==0.29.1
+h5py==3.10.0
+idna==3.6
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
+Jinja2==3.1.3
+keras==3.1.1
+kiwisolver==1.4.5
+libclang==18.1.1
+lz4==4.3.3
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+mdurl==0.1.2
+ml-dtypes==0.3.2
+moviepy==1.0.3
+mpmath==1.3.0
+namex==0.0.7
+networkx==3.2.1
+numpy==1.26.4
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+optree==0.10.0
+packaging==23.2
+pandas==2.2.1
+pillow==10.2.0
+proglog==0.1.10
+protobuf==4.25.3
+pygame==2.5.2
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2024.1
+requests==2.31.0
+rich==13.7.1
+seaborn==0.13.2
+six==1.16.0
+swig==4.2.1
+sympy==1.12
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-cpu==2.16.1
+tensorflow-intel==2.16.1
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+torch==2.2.1
+tqdm==4.66.2
+typing_extensions==4.9.0
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.1
+wrapt==1.16.0
